# SLAM_eval

./: .gitignore  .gitignore.swp  README.md  data_parser.py  drift_evaluation.py  euroc_odometry.py  eval_drift.py  eval_euroc.py  eval_isae.py  eval_oivio.py  isae_odometry.py  kitti_odometry.py  mc_oivio.py  oivio_odometry.py
dataset/EUROC/: V2.csv
dataset/OIVIO/: MN_015_GV1.csv  MN_015_GV2.csv  MN_050_GV1.csv  MN_050_GV2.csv  MN_050_HH.csv  MN_100_GV1.csv  MN_100_GV2.csv  TN_015_GV1.csv  TN_050_GV1.csv  TN_100_GV1.csv
dataset/gazebo/: C1.txt  C3.txt  C4.txt  C5.txt  chariot1.txt  chariot2.txt  chariot3.txt  chariot4.txt  demo_coax.txt  demo_mars.txt  nonoverlapping_cave.txt  nonoverlapping_test.txt  toEUROCformat.py  traj_3.txt  traj_4.txt
dataset/isae/: C1.csv  C3.csv  C4.csv  C5.csv  boucle1.csv  boucle2.csv  chariot1.csv  chariot2.csv  chariot3.csv  chariot4.csv  grand_tour.csv  nonoverlapping_cave.csv  nonoverlapping_test.csv  tour_butte2.csv  tour_butte3.csv  tour_pierre1.csv  tour_pierre2.csv  traj_3.csv  traj_4.csv
dataset/isae_drift/: calib.csv  tunnel_light.csv
dense_stereo_fisheye/: CMakeLists.txt  denseStereo.cpp  denseStereo.hpp  ds_parameters.yaml  omni_parameters.yaml  param.yaml  pc_generation.cpp  tuning.cpp
lidar_cam_calib/: fisheye3_loam.csv  fisheye3_pavio.txt  loam_pavio_alignment.py  titou_loam.csv  titou_pavio.txt
pc_comparison/: CMakeLists.txt  param.yaml  pc_comparison.cpp
result/example_1/: result.txt
result/pavo/: 07.txt  10.txt  11.txt  C1.txt  C3.txt  C4.txt  MN_015_GV1.txt  MN_015_GV2.txt  MN_050_GV1.txt  MN_050_GV1_best.txt  MN_050_GV2.txt  MN_050_GV2_marg.txt  MN_050_GV2_nomarg.txt  MN_050_GV2_sparsif.txt  MN_050_HH_1.txt  MN_100_GV1.txt  MN_100_GV2.txt  TN_015_GV1.txt  TN_050_GV1.txt  TN_100_GV1.txt  V1.txt  V2.txt  V3.txt  V3_best.txt  V3_pamal.txt  chariot1.txt  chariot1_gut.txt  (+6 more)
vicon_reconstruction/: scanViconRoom.m
(+32 files in other folders)
